--- a/HelloWorld/res/layout/adapter_photo.xml
+++ b/HelloWorld/res/layout/adapter_photo.xml
@@ -3,16 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <Button 
-        android:id="@+id/button_start_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="start gallery"/>
 
     <ImageView
-        android:id="@+id/image_select_pict"
+        android:id="@+id/image_photo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
