--- a/HelloWorld/res/layout/activity_show_gallery.xml
+++ b/HelloWorld/res/layout/activity_show_gallery.xml
@@ -3,16 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <Button 
-        android:id="@+id/button_start_gallery"
+
+    <GridView
+        android:id="@+id/list_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="start gallery"/>
-
-    <ImageView
-        android:id="@+id/image_select_pict"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:numColumns="3" >
+    </GridView>
 
 </LinearLayout>
