--- a/HelloWorld/res/layout/activity_file_manage.xml
+++ b/HelloWorld/res/layout/activity_file_manage.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <GridView
-        android:id="@+id/list_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numColumns="3" >
-    </GridView>
+    <ListView
+        android:id="@+id/list_file"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
