--- a/HelloWorld/res/layout/activity_async.xml
+++ b/HelloWorld/res/layout/activity_async.xml
@@ -3,6 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/button_start_async01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="バック処理01" />
     
+    <Button
+        android:id="@+id/button_start_async02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="バック処理02" />
+
+    <ImageView
+        android:id="@+id/image_async"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
