--- a/HelloWorld/res/layout/adapter_photo.xml
+++ b/HelloWorld/res/layout/adapter_photo.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <ImageView
+    <com.example.helloworld.view.SquareImageView
         android:id="@+id/image_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
