--- a/HelloWorld/res/values/styles.xml
+++ b/HelloWorld/res/values/styles.xml
@@ -22,5 +22,10 @@
 　　　　<item name="android:textColor">#ffffff</item>
 	  <item name="android:layout_marginLeft">10dp</item>
 　　</style>
+	  
+    <drawable name="translucent_background">#99000000</drawable>
+    <style name="Theme.HarfTrans" parent="android:style/Theme.Translucent">
+        <item name="android:windowBackground">@drawable/translucent_background</item>
+    </style>
 
 </resources>
